# YaesuEmulator

./: .clang-format  .gitignore  AntennaState.cpp  AntennaState.h  Application.cpp  Application.h  CMakeLists.txt  Client.cpp  Client.h  CommandParser.cpp  CommandParser.h  Emulator.cpp  Emulator.h  EmulatorView.qml  Logger.cpp  Logger.h  LoggerView.qml  README.md  Server.cpp  Server.h  ServerView.qml  Settings.cpp  Settings.h  Types.h  Utils.cpp  Utils.h  Widget.cpp  Widget.h  main.cpp  main.qml  qml.qrc
